Cleanup and polish - now with a README and cleaner architecture

--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
     <script src="/bundle.js"></script>
   </head>
   <body class="main-colour">
-    Content that should be replaced when the code runs properly.
+    See the JS Console. You should see "Hello, World!" if everything worked.
   </body>
 </html>
 
